--- a/conf/bmt.toml
+++ b/conf/bmt.toml
@@ -4,12 +4,14 @@ title = "TOML Example"
 
 [dbload]
 # 동시 쓰레드 갯수
-threadnum  = 1
+threadnum  = 2
 # DB DML 의  입력값 범위
-paramrange = [ 1, 2000 ]
+paramrange = [ 1, 10000 ]
 
 # bmt 대상 DB 설정
 [[database]]
+# bmt  = 1 이면 bmt 실행
+     bmt          = 1
 	dbproduct = "altibase7"
 	driver       = "Altibase.jdbc.driver.AltibaseDriver"
 	url          = "jdbc:Altibase://192.168.56.1:20300/mydb"
@@ -18,20 +20,23 @@ paramrange = [ 1, 2000 ]
 	initquery   = [ "drop table tb_test" , 
 	                "create table tb_test( c1 integer, c2 integer, c3 integer, c4 date)" 
 	               ]
-	insertparams= [ "NUMBER", "NUMBER", "NUMBER"]
+
+# INT, LONG, DOUBLE, VARCHAR, STRING	               
+	insertparams= [ "int", "int", "int"]      
 	insertquery = "INSERT INTO TB_TEST (C1, C2, C3, C4 ) VALUES (?,?,?, SYSDATE)"
 
-	selectparams= [ "NUMBER" ]
+	selectparams= [ "int" ]
 	selectquery = "SELECT * FROM TB_TEST WHERE C1=?"
 
-	updateparams= [ "NUMBER" ]
+	updateparams= [ "int" ]
 	updatequery = "UPDATE TB_TEST SET C2=C2+1, C4=C4+1 TB_TEST WHERE C1=?"
 
-	deleteparmas= [ "NUMBER" ]
+	deleteparmas= [ "int" ]
 	deletequery = "DELETE FROM TB_TEST WHERE C1=?"
 
 # bmt 대상 DB 설정		
 [[database]]
+    bmt                 = 0
 	dbproduct      = "oracle11g"
 	driver      = "Altibase.jdbc.driver.AltibaseDriver"
 	url         = "jdbc:Altibase://192.168.56.1:20300/mydb"
@@ -40,14 +45,14 @@ paramrange = [ 1, 2000 ]
 	initquery   = [ "drop table tb_test" , 
 	                "create table tb_test( c1 integer, c2 integer, c3 integer, c4 date)" 
 	               ]
-	insertparams= [ "NUMBER", "NUMBER", "NUMBER"]
+	insertparams= [ "int", "int", "int"]
 	insertquery = "INSERT INTO TB_TEST (C1, C2, C3, C4 ) VALUES (?,?,?, SYSDATE)"
 
-	selectparams= [ "NUMBER" ]
+	selectparams= [ "int" ]
 	selectquery = "SELECT * FROM TB_TEST WHERE C1=?"
 
-	updateparams= [ "NUMBER" ]
+	updateparams= [ "int" ]
 	updatequery = "UPDATE TB_TEST SET C2=C2+1, C4=C4+1 TB_TEST WHERE C1=?"
 
-	deleteparmas= [ "NUMBER" ]
+	deleteparmas= [ "int" ]
 	deletequery = "DELETE FROM TB_TEST WHERE C1=?"
