--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/eclipse-workspace/SimpleDbDmlBmt/driver/Alti6.5.1.jar"/>
+	<classpathentry kind="lib" path="conf"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
